--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "dev": "rollup -c -w --host 0.0.0.0",
     "start": "sirv public --no-clear -s --host 0.0.0.0"
 
   },
