--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "rollup -c sirv public --no-clear -s --host 0.0.0.0"
+    "start": "sirv public --no-clear -s --host 0.0.0.0"
 
   },
   "devDependencies": {
